syntax = "proto3";

option java_package = "com.freephoenix888.savemylife";
option java_multiple_files = true;

message LocationPreferences {
  bool isLocationSharingEnabled = 1;
}