syntax = "proto3";

option java_package = "com.freephoenix888.savemylife";
option java_multiple_files = true;

message SaveMyLifePreferences {
  bool isMainServiceEnabled = 1;
  bool isAlarmModeEnabled = 2;
  bool isFirstAppLaunch = 3;
}